--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "@mantine/core": "^7.17.7",
     "@mantine/hooks": "^7.17.7",
+    "@mantine/form": "^8.0.0",
     "@tabler/icons-react": "^3.31.0",
     "@web3-storage/w3up-client": "^17.2.0",
     "axios": "^1.9.0",
