--- a/firebase.json
+++ b/firebase.json
@@ -43,8 +43,7 @@
     "ui": {
       "enabled": true
     },
-    "singleProjectMode": true,
-    "exportOnExit": true
+    "singleProjectMode": true
   }
 }
 
