--- a/smart-contracts/package.json
+++ b/smart-contracts/package.json
@@ -12,7 +12,8 @@
   "devDependencies": {
     "@nomicfoundation/hardhat-toolbox": "^5.0.0",
     "eslint": "^9.24.0",
-    "hardhat": "^2.23.0"
+    "hardhat": "^2.24.1",
+    "solc": "^0.8.30"
   },
   "dependencies": {
     "@openzeppelin/contracts": "^5.3.0"
