--- a/frontend/package.json
+++ b/frontend/package.json
@@ -12,12 +12,13 @@
     "@mantine/core": "^8.0.0",
     "@mantine/form": "^8.0.0",
     "@mantine/hooks": "^8.0.0",
-    "@tabler/icons-react": "^3.34.0",
+    "@tabler/icons-react": "^3.33.0",
     "axios": "^1.9.0",
+    "crypto-js": "^4.2.0",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "echarts-for-react": "^3.0.2",
-    "ethers": "^6.14.3",
+    "ethers": "^6.14.1",
     "firebase": "^11.8.1",
     "firebase-tools": "^14.2.0",
     "i18next": "^25.1.3",
@@ -30,7 +31,7 @@
     "react-router-dom": "^6.30.1"
   },
   "devDependencies": {
-    "@vitejs/plugin-react": "^4.5.1",
+    "@vitejs/plugin-react": "^4.5.0",
     "vite": "^6.2.6"
   },
   "main": "vite.config.js",
